2005-11-07  Carl Worth  <cworth@cworth.org>

	* src/cairo-gstate.c: (_cairo_gstate_create),
	(_cairo_gstate_clone): Style fix: test-and-bail rather than making
	the working body conditional.

	* src/cairo-gstate.c: (_cairo_gstate_destroy): Allow destroy to
	work on a NULL object.

2005-11-07  Carl Worth  <cworth@cworth.org>

	* src/Makefile.am:
	* src/cairoint.h:
	* src/cairo-stroke-style.c: (_cairo_stroke_style_init),
	(_cairo_stroke_style_init_copy), (_cairo_stroke_style_fini): Add
	functions to initialize and copy cairo_stroke_style_t objects.

	* src/cairo-gstate.c: (_cairo_gstate_init),
	(_cairo_gstate_init_copy), (_cairo_gstate_fini): Use new
	_cairo_stroke_style functions rather than direct modification.
	
	* src/cairoint.h: Add missing prototype for
	_cairo_font_options_init_copy.

2005-11-07  Carl Worth  <cworth@cworth.org>

	* src/cairoint.h: Remove unused prototypes for
	_cairo_gstate_begin_group and _cairo_gstate_end_group.

2005-11-07  Carl Worth  <cworth@cworth.org>

	* src/cairo-gstate.c: Add documentation for _cairo_gstate_create,
	_cairo_gstate_init_copy, and _cairo_gstate_clone.

2005-11-05  Carl Worth  <cworth@cworth.org>

	* src/cairo-font-options.c: (_cairo_font_options_init_copy),
	(cairo_font_options_copy): Add a function for copying font options
	rather than just using direct structure copying.

2005-11-05  Carl Worth  <cworth@cworth.org>

	* src/cairo-ps-surface.c: (_cairo_ps_surface_show_page),
	(_cairo_ps_surface_get_font): Add missing declarations for status
	variables. Thanks to Mikael Hallendal for pointing this out.

2005-11-04  Carl Worth  <cworth@cworth.org>

	* src/cairoint.h:
	* src/cairo-array.c: (_cairo_array_append),
	(_cairo_array_append_multiple): Rename old, rarely used
	_cairo_array_append to _cairo_array_append_multiple. Add much more
	common _cairo_array_append. Fix both to return a
	cairo_status_t. Remove undocumented code to allow a non-copying
	append when elements is NULL, (let's not encourage unintialized